# IPCV_Project

./: .gitignore  Visual Inspection of Motorcycle Connecting Rods.ipynb  pyproject.toml  utils.py
images/: tasks.json
report/: bibliography.bib  report.tex
report/parts/: abstract.tex  chapter1.tex  chapter2.tex  titlepage.tex
utils/: image_processing.py
