[tool.poetry]
name = "ipcv_project"
version = "0.1.0"
description = "Visual Inspection of Motorcycle Connecting Rods"
authors = ["Giorgio Buzzanca <giorgio.buzzanca@studio.unibo.it>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.6.0"
matplotlib = "^3.6.0"
jupyterlab = "^3.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
